k8s/jenkins.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
spec:
  replicas: 1  # Number of Jenkins instances
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
        - name: sabaajenkins
          image: jenkins/jenkins:lts
          ports:
            - containerPort: 8080
              name: web
            - containerPort: 50000
              name: agent
          resources:
            requests:
              cpu: 0.5
              memory: 1Gi
            limits:
              cpu: 1
              memory: 2Gi
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home

      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkinssabaa-pvc  # Name of your PVC


---
cd
