k8s/polybot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polybot
  labels:
    app: polybot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polybot
  template:
    metadata:
      labels:
        app: polybot
    spec:
      containers:
        - name: polybot
          image: 933060838752.dkr.ecr.eu-central-1.amazonaws.com/ploybot_sabaa2:latest
          ports:
            - containerPort: 8443
          readinessProbe:
            httpGet:
              path: /readiness
              port: 8443
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /liveness
              port: 8443
            initialDelaySeconds: 15
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 2
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1024Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: polybot-service
spec:
  selector:
    app: polybot
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
