k8s/yolo5.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yolo5
  labels:
    app: yolo5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yolo5
  template:
    metadata:
      labels:
        app: yolo5
    spec:
      containers:
        - name: yolo5
          image: 933060838752.dkr.ecr.eu-central-1.amazonaws.com/yolo5_sabaa2:latest
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /readiness
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /liveness
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 30
          resources:
            requests:
              memory: "512Mi"  # Increased memory request to 512Mi
              cpu: "200m"      # Increased CPU request to 200m
            limits:
              memory: "2048Mi" # Increased memory limit to 2048Mi
              cpu: "1000m"     # Increased CPU limit to 1000m"
---

apiVersion: v1
kind: Service
metadata:
  name: yolo5-service
spec:
  selector:
    app: yolo5
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
