k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polybot-ingress
  namespace: sabaa
  annotations:
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
#    - host: sabaa.atech-bot.click
#      http:
#        paths:
#          - path: "/"
#            pathType: Prefix
#            backend:
#              service:
#                name: polybot-service
#                port:
#                  number: 80  # HTTP traffic

    - host: sabaa.atech-bot.click
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: polybot-service
                port:
                  number: 8443  # HTTPS traffic

  tls:
    - hosts:
        - sabaa.atech-bot.click
      secretName: polybot-certificate  # Name of the TLS secret containing your SSL certificate and key
